[gd_scene load_steps=9 format=3 uid="uid://n6pbyf35d50p"]

[ext_resource type="Script" path="res://UI/Phone/Button/GD_Deck.gd" id="1_wmmir"]
[ext_resource type="Texture2D" uid="uid://dhrjjnkragqjg" path="res://Assets/Phone/currentpile.png" id="2_iaxsm"]
[ext_resource type="Theme" uid="uid://uutcpcwlfoyu" path="res://UI/Phone/theme/ui.theme" id="3_7k2d7"]
[ext_resource type="LabelSettings" uid="uid://d3bit3qtq3v0r" path="res://UI/Phone/Button/ButtonFontSetting.tres" id="3_cdd7a"]
[ext_resource type="LabelSettings" uid="uid://dwmn8b6v7534y" path="res://UI/Phone/NotiFontSetting.tres" id="3_xj7f2"]
[ext_resource type="StyleBox" uid="uid://rq4cp7w0v2fx" path="res://UI/Phone/theme/panel/noti_panel.stylebox" id="4_brxpt"]
[ext_resource type="PackedScene" uid="uid://donmta1ldnate" path="res://UI/Phone/Pile/S_DeckPile.tscn" id="7_ia2nl"]
[ext_resource type="AudioStream" uid="uid://mtqo5ke6b3gm" path="res://Assets/SFX/SFX_App_Open.mp3" id="8_b1f82"]

[node name="Deck" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -65.0
offset_right = -65.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmmir")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -65.0
offset_top = -65.0
offset_right = -65.0
offset_bottom = -65.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ViewButton" type="TextureButton" parent="Control/VSplitContainer"]
layout_mode = 2
texture_normal = ExtResource("2_iaxsm")

[node name="Control" type="Control" parent="Control/VSplitContainer/ViewButton"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Control" type="Control" parent="Control/VSplitContainer/ViewButton/Control"]
anchors_preset = 0
offset_right = 60.0

[node name="PanelContainer" type="PanelContainer" parent="Control/VSplitContainer/ViewButton/Control/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_7k2d7")
theme_override_styles/panel = ExtResource("4_brxpt")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VSplitContainer/ViewButton/Control/Control/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Control" type="Control" parent="Control/VSplitContainer/ViewButton/Control/Control/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/VSplitContainer/ViewButton/Control/Control/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="CardsLabel" type="Label" parent="Control/VSplitContainer/ViewButton/Control/Control/PanelContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_xj7f2")

[node name="Control2" type="Control" parent="Control/VSplitContainer/ViewButton/Control/Control/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/VSplitContainer"]
layout_mode = 2
text = "Asset"
label_settings = ExtResource("3_cdd7a")
horizontal_alignment = 1

[node name="DeckCard" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -540.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2

[node name="SDeckPile" parent="." instance=ExtResource("7_ia2nl")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b1f82")

[connection signal="pressed" from="Control/VSplitContainer/ViewButton" to="." method="_on_view_button_pressed"]
[connection signal="child_order_changed" from="DeckCard" to="." method="_on_deck_card_child_order_changed"]
